--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
   position: fixed;
   width: 100%;
   top:0;
+  z-index: 2;
 }
 
 .top-header .header__top,
@@ -18,12 +19,20 @@
   font-size : 12px;
 }
 
+.top-header a{
+  color: white;
+}
+
 .top-header .header__bottom{
     margin:0 10px;
 }
 
 .top-header .header__column{
   width:33%
+}
+
+.top-header .header__bottom .header__column:first-child {
+  color: rgba(255,255,255,0.5);
 }
 
 .top-header .header__column:last-child{
